# sqllineage

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
.github/workflows/: release.yml
sqllineage/: Cargo.toml
sqllineage-python/: Cargo.toml  pyproject.toml  sqllineage.pyi
sqllineage-python/src/: lib.rs
sqllineage/src/: dialect.rs  lib.rs  types.rs
sqllineage/src/graph/: edge.rs  mod.rs  node.rs  scope.rs
sqllineage/src/resolve/: catalog.rs  mod.rs  topo.rs
sqllineage/tests/: catalog.rs  column_lineage.rs  cte.rs  expr_coverage.rs  lateral.rs  merge.rs  multi_statement.rs  setexpr_coverage.rs  table_lineage.rs  update.rs  window_functions.rs
sqllineage/tests/common/: mod.rs
