[package]
name = "sqllineage-python"
version = "0.1.0"
edition = "2024"
description = "Python bindings for sqllineage — SQL lineage extraction"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "sqllineage"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py39"] }
sqllineage-core = { path = "../sqllineage", package = "sqllineage" }
