[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "sqllineage"
version = "0.1.0"
description = "Extract table and column-level lineage from SQL"
readme = "../README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
]

[tool.maturin]
