[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "sqllineage-rs"
version = "0.1.3"
description = "Extract table and column-level lineage from SQL"
license = "MIT OR Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
]

[tool.maturin]
