[package]
name = "sqllineage"
version = "0.1.3"
edition = "2024"
description = "Extract table and column-level lineage from SQL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/funcpp/sqllineage"
readme = "../README.md"

[lib]
name = "sqllineage"
path = "src/lib.rs"

[[bin]]
name = "sqllineage"
path = "src/bin/sqllineage.rs"

[dependencies]
sqlparser = { git = "https://github.com/funcpp/datafusion-sqlparser-rs", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.clap]
version = "4.6"
features = ["derive"]
optional = true

[features]
default = ["cli"]
cli = ["clap"]

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }
